--- a/dvs-android/build.gradle
+++ b/dvs-android/build.gradle
@@ -46,6 +46,7 @@ apply plugin: 'kover'
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
