--- a/dvs-android/repository/build.gradle
+++ b/dvs-android/repository/build.gradle
@@ -69,4 +69,8 @@ dependencies {
     testImplementation "io.kotest:kotest-assertions-core:$kotestVersion"
     testImplementation "io.kotest:kotest-property:$kotestVersion"
     testImplementation "io.mockk:mockk:$mockkVersion"
+
+    //GSON
+    implementation "com.squareup,retrofit2:converter-gson:2.4.0"
+    implementation "com.google.code.gson:gson:2.9.0"
 }
