--- a/dvs-android/app/simpleapp/build.gradle
+++ b/dvs-android/app/simpleapp/build.gradle
@@ -132,4 +132,10 @@ dependencies {
     // Leak Canary
     // Uncomment this when have to check for leaks
     // debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+
+
+    //GSON
+    implementation "com.squareup,retrofit2:converter-gson:2.4.0"
+
+    implementation "com.google.code.gson:gson:2.9.0"
 }
