--- a/dvs-android/data/remote/build.gradle
+++ b/dvs-android/data/remote/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     testImplementation "io.mockk:mockk:$mockkVersion"
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttpVersion"
     androidTestImplementation "io.mockk:mockk-android:$mockkVersion"
+
+    //GSON
+    implementation "com.squareup,retrofit2:converter-gson:2.4.0"
+    implementation "com.google.code.gson:gson:2.9.0"
 }
