--- a/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
+++ b/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
@@ -6,17 +6,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DVS"
         tools:targetApi="31">
         <activity
-            android:name=".ListProductActivity"
-            android:exported="false" />
+            android:name=".ui.listproduct.ListProductActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".WelcomeScreenActivity"
             android:exported="false" />
