--- a/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
+++ b/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ui.login.LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".WelcomeScreenActivity"
+            android:name=".ui.welcomescreen.WelcomeScreenActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
@@ -31,7 +31,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
 
         </activity>
