--- a/DVS_Mobile_Apps/app/build.gradle
+++ b/DVS_Mobile_Apps/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -43,6 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -60,4 +62,9 @@ dependencies {
 
     //sp
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    
+
+    //firebase
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
 }
