--- a/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
+++ b/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".ui.welcomescreen.WelcomeScreenActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
