--- a/DVS_Mobile_Apps/app/build.gradle
+++ b/DVS_Mobile_Apps/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
     //firebase
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+
 }
