--- a/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
+++ b/DVS_Mobile_Apps/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:exported="false" />
 
         <service
-            android:name=".ui.notification.MyFirebaseMessagingService"
+            android:name=".util.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -45,7 +45,7 @@
             android:name=".ui.notification.NotificationActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.chat.ChatActivity"
+            android:name=".ui.chat.DetailChatActivity"
             android:exported="true" />
         <activity
             android:name=".ui.listproduct.ListProductActivity"
@@ -66,7 +66,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true" />
     </application>
 
