--- a/DVS_Mobile_Apps/app/build.gradle
+++ b/DVS_Mobile_Apps/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 
     //firebase
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
+
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
